ApexWorkbook/src/objects/Band__c.object
<CustomObject>
    <fields>
        <fullName>Genre__c</fullName>
        <label>Genre</label>
        <picklist>
            <picklistValues>
                <fullName>Rock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bossanova</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reggae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salsa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Headliner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Headliner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Phone_Number__c</fullName>
        <label>Manager Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Needs_Piano__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Piano</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_Time__c</fullName>
        <label>Set Time</label>
        <picklist>
            <picklistValues>
                <fullName>10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <label>Twitter Handle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Band</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Bossanova_Bands</fullName>
        <columns>NAME</columns>
        <columns>Manager_Phone_Number__c</columns>
        <columns>Twitter_Handle__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Genre__c</field>
            <operation>equals</operation>
            <value>Bossanova</value>
        </filters>
        <label>Bossanova Bands</label>
    </listViews>
    <nameField>
        <label>Band Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>